# divvunspell-sdk-python

./: Cargo.toml  Dockerfile  README.md  build-manylinux.sh  pyproject.toml
.github/workflows/: ci.yml
libexec/: build-wheels.sh
src/: lib.rs
