[package]
name = "divvunspell-python"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[lib]
name = "divvunspell"
crate-type = ["cdylib"]

[dependencies]
divvunspell = { git = "https://github.com/divvun/divvunspell", branch = "main", features = ["compression"] }

[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module"]

[package.metadata.maturin]
name = "divvunspell"
classifiers = [
  "Programming Language :: Rust"
]
