[package]
name = "divvunspell"
version = "0.2.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

# Has the same name as the real divvunspell. This is just the Python wrapper.
publish = false 

[lib]
name = "divvunspell"
crate-type = ["cdylib"]

[dependencies]
divvunspell = { git = "https://github.com/divvun/divvunspell", branch = "main", features = ["compression"] }

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[package.metadata.maturin]
name = "divvunspell"
classifiers = [
  "Programming Language :: Rust"
]
